# simple_minimizer

./: LICENSE  README.md  make_project.sh  pyproject.toml  upload_project.sh
src/simple_minimizer/: __init__.py  logistic_constraints.py  minimizer.py  vertex.py
src/tests/: test1.py
