[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-minimizer"
version = "1.0.2"
authors = [
  { name="TJ Radcliffe", email="tj@tjradcliffe.com" },
]
description = "A brutally simple, extremely robust minimizer"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tjradcliffe/simple-minimizer"
"Bug Tracker" = "https://github.com/tjradcliffe/simple-minimizer/issues"
